--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -15,9 +15,10 @@
 
 
     <form action="/findMember" method="POST">
-        <select name="categoryCode">
+        <select name="serchCode">
             <option value="0">会員ID</option>
             <option value="1">会員名</option>
+            <option value="2">会員住所</option>
         </select>
         <input type="text" name="freeword">
         <p><input type="submit" value="検索"></p>
