--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -8,7 +8,7 @@
 
 <body>
 
-    <p><a href="/">ログアウト</a> <a href="/adminAddMember">新規登録</a> <a href="/adminHotel">宿情報管理</a></p>
+    <p><a href="/">ログアウト</a> <a href="/adminHotel">宿情報管理</a></p>
 
     <h1>会員一覧</h1>
     <span style="color:red;" th:text="${errorMsg}"></span>
@@ -39,10 +39,16 @@
             <td th:text="${member.memberJoin}"></td>
             <td th:text="${member.memberWithdrawal}"></td>
             <td>
-            <form action="/removeMember" method="post">
-                <input type="hidden" name="memberId" th:value="${member.memberId}">
-                <input type="submit" value="削除">
-            </form>
+                <form action="/updateMember" method="post">
+                    <input type="hidden" name="memberId" th:value="${member.memberId}">
+                    <input type="submit" value="更新">
+                </form>
+            </td>
+            <td>
+                <form action="/removeMember" method="post">
+                    <input type="hidden" name="memberId" th:value="${member.memberId}">
+                    <input type="submit" value="削除">
+                </form>
             </td>
         </tr>
     </table>
