--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -8,7 +8,7 @@
 
 <body>
 
-    <p><a href="/">ログアウト</a> <a href="/adminHotel">宿情報管理</a></p>
+    <p><a href="/">ログアウト</a> <a href="/adminHotel">宿情報管理</a> <a href="adminPlanType">プラン情報管理</a></p>
 
     <h1>会員一覧</h1>
     <span style="color:red;" th:text="${errorMsg}"></span>
