--- a/src/main/resources/templates/member.html
+++ b/src/main/resources/templates/member.html
@@ -8,17 +8,27 @@
 
 <body>
 
-    <p><a href="/">ログアウト</a> <a href="/removeMember">退会</a></p>
+    <p><a href="/">ログアウト</a></p>
 
     <h1>ログインアカウント</h1>
     <h2 th:text="${member.memberName}"></h2>
-    <form action="/editMember" method="post">
-        <input type="hidden" name="memberId" th:value="${member.memberId}">
-        <input type="submit" value="会員情報変更">
-    </form>
+    <div style="display:inline-flex">
+        <form action="/editMember" method="post">
+            <input type="hidden" name="memberId" th:value="${member.memberId}">
+            <input type="submit" value="会員情報変更">
+        </form>
+        <form action="/deleteMember" method="post">
+            <input type="hidden" name="memberId" th:value="${member.memberId}">
+            <input type="submit" value="退会">
+        </form>
+        <form action="/editReservations" method="post">
+            <input type="hidden" name="memberId" th:value="${member.memberId}">
+            <input type="submit" value="予約一覧">
+        </form>
+    </div>
+    <p> </p>
     <span style="color:red;" th:text="${errorMsg}"></span>
 
-    <br>
     <table border="1">
         <tr>
             <th>プランID</th><th>宿ID</th><th>宿名</th><th>プラン内容</th><th>金額</th><th>部屋数</th>
