デザイン追加

--- a/src/main/resources/templates/addUser.html
+++ b/src/main/resources/templates/addUser.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>新規登録</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 <body>
-    <form action="/"><input type="submit" value="戻る"></form>
+    <form action="/"><input type="submit" value="戻る" class="button"></form>
 
 	<h1>新規登録</h1>
 
@@ -35,7 +36,7 @@
     <p>
         パスワード：<input type="text" name="memberPass">
     </p>
-    <form action="/"><input type="submit" value="登録"></form>
+    <form action="/"><input type="submit" value="登録" class="button"></form>
 
     </form>
 </body>
