--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ログイン</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     <p>
         パスワード：<input type="text" name="memberPass">
     </p>
-    <input type="submit" value="ログイン">
+    <input type="submit" value="ログイン" class="button">
 
     </form>
 
