--- a/src/main/resources/templates/updateHotelPlan.html
+++ b/src/main/resources/templates/updateHotelPlan.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>管理者ログイン</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 <body>
-    <form action="editHotelPlan"><input type="submit" value="戻る">
+    <form action="editHotelPlan"><input type="submit" value="戻る" class="button">
         <input type="hidden" name="hotelId" th:value="${plan.hotelId}">
     </form>
 
@@ -42,7 +43,7 @@
         備考：<input type="text" name="planDescription" th:value="${plan.planDescription}">
     </p>
 
-    <input type="submit" value="変更">
+    <input type="submit" value="変更" class="button">
 
     </form>
 </body>
