--- a/src/main/resources/templates/addHotel.html
+++ b/src/main/resources/templates/addHotel.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>管理者ログイン</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 <body>
-    <form action="adminHotel"><input type="submit" value="戻る"></form>
+    <form action="adminHotel"><input type="submit" value="戻る" class="button"></form>
 
 	<h1>宿新規登録</h1>
 
@@ -35,7 +36,7 @@
     <p>
         チェックアウト時間：<input type="text" name="hotelCheckout">
     </p>
-    <input type="submit" value="登録">
+    <input type="submit" value="登録" class="button">
 
     </form>
 </body>
