--- a/src/main/resources/templates/addHotelPlan.html
+++ b/src/main/resources/templates/addHotelPlan.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>管理者ログイン</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 <body>
-    <form action="adminHotel"><input type="submit" value="戻る"></form>
+    <form action="adminHotel"><input type="submit" value="戻る" class="button"></form>
 
 	<h1>宿プラン登録</h1>
 
@@ -36,7 +37,7 @@
         備考：<input type="text" name="planDescription">
     </p>
 
-    <input type="submit" value="登録">
+    <input type="submit" value="登録" class="button">
 
     </form>
 </body>
