--- a/src/main/resources/templates/addPlanType.html
+++ b/src/main/resources/templates/addPlanType.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>管理者ログイン</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 <body>
-    <form action="adminPlanType"><input type="submit" value="戻る"></form>
+    <form action="adminPlanType"><input type="submit" value="戻る" class="button"></form>
 
 	<h1>プランタイプ登録</h1>
 
@@ -20,7 +21,7 @@
         プラン名：<input type="text" name="planName">
     </p>
 
-    <input type="submit" value="登録">
+    <input type="submit" value="登録" class="button">
 
     </form>
 </body>
