--- a/src/main/resources/templates/adminHotel.html
+++ b/src/main/resources/templates/adminHotel.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>管理者ログイン</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 
 <body>
@@ -26,7 +27,7 @@
             <option value="6">ペンション</option>
         </select>
         <input type="text" name="freeWord">
-        <p><input type="submit" value="検索"></p>
+        <p><input type="submit" value="検索" class="button"></p>
     </form>
 
     <table border="1">
@@ -50,25 +51,25 @@
             <td>
                 <form action="/updateHotel" method="post">
                     <input type="hidden" name="hotelId" th:value="${hotel.hotelId}">
-                    <input type="submit" value="更新">
+                    <input type="submit" value="更新" class="button">
                 </form>
             </td>
             <td>
                 <form action="/removeHotel" method="post">
                     <input type="hidden" name="hotelId" th:value="${hotel.hotelId}">
-                    <input type="submit" value="削除">
+                    <input type="submit" value="削除" class="button">
                 </form>
             </td>
             <td>
                 <form action="/addHotelPlan" method="post">
                     <input type="hidden" name="hotelId" th:value="${hotel.hotelId}">
-                    <input type="submit" value="プラン登録">
+                    <input type="submit" value="プラン登録" class="button">
                 </form>
             </td>
             <td>
                 <form action="/editHotelPlan" method="post">
                     <input type="hidden" name="hotelId" th:value="${hotel.hotelId}">
-                    <input type="submit" value="プラン更新・削除">
+                    <input type="submit" value="プラン更新・削除" class="button">
                 </form>
             </td>
         </tr>
