--- a/src/main/resources/templates/adminPlanType.html
+++ b/src/main/resources/templates/adminPlanType.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>管理者ログイン</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
             <td>
                 <form action="/updatePlanType" method="post">
                     <input type="hidden" name="planTypeId" th:value="${plan.planTypeId}">
-                    <input type="submit" value="更新">
+                    <input type="submit" value="更新" class="button">
                 </form>
             </td>
         </tr>
