--- a/src/main/resources/templates/editMember.html
+++ b/src/main/resources/templates/editMember.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>会員情報変更</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 
 <body>
     <form action="member">
         <input type="hidden" name="memberId" th:value="${member.memberId}">
-        <input type="submit" value="戻る">
+        <input type="submit" value="戻る" class="button">
     </form>
 	<h1>会員情報変更</h1>
     <span style="color:red;" th:text="${errorMsg}"></span>
@@ -39,7 +40,7 @@
         </p>
 
         <input type="hidden" name="memberId" th:value="${member.memberId}">
-        <input type="submit" value="更新">
+        <input type="submit" value="更新" class="button">
 
     </form>
 </body>
