--- a/src/main/resources/templates/historyReservations.html
+++ b/src/main/resources/templates/historyReservations.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>予約履歴</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 
 <body>
     <form action="member">
         <input type="hidden" name="memberId" th:value="${memberId}">
-        <input type="submit" value="戻る">
+        <input type="submit" value="戻る" class="button">
     </form>
     <h1>予約履歴</h1>
     
@@ -40,7 +41,7 @@
                         </span>
                     </span>
                     <input type="hidden" name="memberId" th:value="${rsv.memberId}">
-                    <input type="submit" value="口コミ投稿">
+                    <input type="submit" value="口コミ投稿" class="button">
                 </form>
             </td>
 
