--- a/src/main/resources/templates/member.html
+++ b/src/main/resources/templates/member.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>宿泊プラン一覧</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 
 <body>
@@ -13,22 +14,22 @@
 
     <h1>宿泊プラン一覧</h1>
     
-    <div style="display:inline-flex">
+    <div style="display:inline-flex;gap: 6px;">
         <form action="/editMember" method="post">
             <input type="hidden" name="memberId" th:value="${member.memberId}">
-            <input type="submit" value="会員情報変更">
+            <input type="submit" value="会員情報変更" class="button">
         </form>
         <form action="/deleteMember" method="post">
             <input type="hidden" name="memberId" th:value="${member.memberId}">
-            <input type="submit" value="退会">
+            <input type="submit" value="退会" class="button">
         </form>
         <form action="/editReservations" method="post">
             <input type="hidden" name="memberId" th:value="${member.memberId}">
-            <input type="submit" value="予約一覧">
+            <input type="submit" value="予約一覧" class="button">
         </form>
         <form action="/historyRsv" method="post">
             <input type="hidden" name="memberId" th:value="${member.memberId}">
-            <input type="submit" value="予約履歴">
+            <input type="submit" value="予約履歴" class="button">
         </form>
     </div>
     <p> </p>
@@ -41,7 +42,7 @@
         </select>
         <input type="text" name="freeword">
         <input type="hidden" name="memberId" th:value="${member.memberId}">
-        <p><input type="submit" value="検索"></p>
+        <p><input type="submit" value="検索" class="button"></p>
     </form>
     <table border="1">
         <tr>
@@ -69,7 +70,7 @@
                 <form action="/reservations" method="post">
                     <input type="hidden" name="planId" th:value="${plan.planId}">
                     <input type="hidden" name="memberId" th:value="${member.memberId}">
-                    <input type="submit" value="予約">
+                    <input type="submit" value="予約" class="button">
                 </form>
             </td>
         </tr>
