--- a/src/main/resources/templates/removeHotel.html
+++ b/src/main/resources/templates/removeHotel.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>管理者ログイン</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 
 <body>
 
-    <form action="adminHotel"><input type="submit" value="戻る"></form>
+    <form action="adminHotel"><input type="submit" value="戻る" class="button"></form>
 
     <h1>宿情報削除</h1>
     <span style="color:red;" th:text="${errorMsg}"></span>
@@ -28,7 +29,7 @@
     </table>
     <form action="/removeH" method="post">
         <input type="hidden" name="hotelId" th:value="${hotel.hotelId}">
-        <input type="submit" value="削除">
+        <input type="submit" value="削除" class="button">
     </form>
 
 </body>
