--- a/src/main/resources/templates/updateMember.html
+++ b/src/main/resources/templates/updateMember.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>管理者ログイン</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 
 <body>
-    <form action="admin"><input type="submit" value="戻る"></form>
+    <form action="admin"><input type="submit" value="戻る" class="button"></form>
 	<h1>会員情報更新</h1>
     <span style="color:red;" th:text="${errorMsg}"></span>
 
@@ -36,7 +37,7 @@
         </p>
 
         <input type="hidden" name="memberId" th:value="${member.memberId}">
-        <input type="submit" value="更新">
+        <input type="submit" value="更新" class="button">
 
     </form>
 </body>
