--- a/src/main/resources/templates/updateRsv.html
+++ b/src/main/resources/templates/updateRsv.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>予約変更</title>
+    <link th:href="@{../css/style.css}" rel="stylesheet"></link>
 </head>
 
 <body>
     <form action="editReservations">
         <input type="hidden" name="memberId" th:value="${rsv.memberId}">
-        <input type="submit" value="戻る">
+        <input type="submit" value="戻る" class="button">
     </form>
 
     <h1>予約変更</h1>
@@ -29,7 +30,7 @@
             部屋数：<input type="number" name="rsvRoomCount" min="1" th:value="${rsv.rsvRoomCount}">
         </p>
         <input type="hidden" name="rsvId" th:value="${rsv.rsvId}">
-        <input type="submit" value="変更">
+        <input type="submit" value="変更" class="button">
     </form>
 </body>
 
