新規機能：会員ランク機能追加

--- a/src/main/resources/templates/member.html
+++ b/src/main/resources/templates/member.html
@@ -62,7 +62,7 @@
                     <span th:if="${plan.planTypeId == planType.planTypeId}" th:text="${planType.planName}"></span>
                 </span>
             </td>
-            <td th:text="${plan.planPrice}"></td>
+            <td th:text="${plan.planMemberPrice}"></td>
             <td th:text="${plan.planRoomCount}"></td>
             <td th:text="${plan.planDeleteDate}"></td>
             <td th:text="${plan.planDescription}"></td>
