戻るボタン追加

--- a/src/main/resources/templates/removeMember.html
+++ b/src/main/resources/templates/removeMember.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+    <form action="admin"><input type="submit" value="戻る" class="button"></form>
     <h1>会員削除</h1>
     <span style="color:red;" th:text="${errorMsg}"></span>
 
